# OpenCLPi

./: CMakeLists.txt  main.cpp
resrc/: bbpformula.cl
resrc/bbpformula/: first_step.cl  last_step.cl
src/ventaquil/: OpenCL.cpp  OpenCL.h
src/ventaquil/OpenCL/: Catcher.cpp  Catcher.h  Context.cpp  Context.h  Device.cpp  Device.h  Helper.cpp  Helper.h  Kernel.cpp  Kernel.h  Platform.cpp  Platform.h  Queue.cpp  Queue.h
src/ventaquil/OpenCLPi/: BBPFormula.cpp  BBPFormula.h
